<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.SignUpActivity">

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/bg_red"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



        <View
            android:id="@+id/overlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#90000000"
            app:layout_constraintBottom_toBottomOf="@id/backgroundImage"
            app:layout_constraintEnd_toEndOf="@id/backgroundImage"
            app:layout_constraintStart_toStartOf="@id/backgroundImage"
            app:layout_constraintTop_toTopOf="@id/backgroundImage" />


        <TextView
            android:id="@+id/txtTituloRegistro"
            style="@style/TitleTextW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_titulo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="48dp" />

        <TextView
            android:id="@+id/txtDescripcion"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_descripcion"
            app:layout_constraintTop_toBottomOf="@id/txtTituloRegistro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp"/>

        <EditText
            android:id="@+id/etNombre"
            style="@style/EditTextStyleW"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombres"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:background="#90000000"
            app:layout_constraintTop_toBottomOf="@id/txtDescripcion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/etApellido"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_apellidos"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:background="#90000000"
            app:layout_constraintTop_toBottomOf="@id/etNombre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/EditTextStyleW"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:background="#90000000"
            app:layout_constraintTop_toBottomOf="@id/etApellido"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"/>


        <EditText
            android:id="@+id/etPassword"
            style="@style/EditTextStyleW"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:background="#90000000"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/etConfirmPassword"
            style="@style/EditTextStyleW"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirmar_password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:background="#90000000"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"/>

        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/ph_camera"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/uploadButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/imgPreview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp">

            <Button
                android:id="@+id/btnUploadDocCamara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_camara"
                android:backgroundTint="@color/primaryDark"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btnUploadGaleria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_galeria"
                android:backgroundTint="@color/primaryDark"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_crear_cuenta"
            android:enabled="true"
            android:backgroundTint="@color/primaryDark"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/uploadButtons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
